# dvmc-impurity-solver

./: .gitignore  CMakeLists.txt  README.md
config/: apple.cmake  apple_clang.cmake  apple_intel.cmake  gcc.cmake  intel.cmake
doc/: INSTALL_DEPENDENCIES.md  README_2018.md  README_2020.md
samples/: README  README.md
samples/01_dVMC/: README.md  params
samples/02_CPT_2x2/: README.md  cluster_spectral.py  dvmc.py  fermi_surface.py  model_2x2.py  params
samples/03_CPT_3x4/: README.md  cluster_spectral.py  fermi_surface.py  params  run_slurm.sh  sec
samples/03_CPT_3x4/output/: qmatrix.def
samples/04_CDMFT_L2_4b/: README.md  general_bath_1D.py
samples/04_CDMFT_L2_4b/expected/: averages.tsv
samples/04_CPT_3x4_doped/: README.md  cluster_spectral.py  params  run_slurm.sh
samples/05_CDMFT_L2_4b/: README.md  params
samples/05_CDMFT_L2_4b_loop/: README.md  run_slurm.sh
samples/05_CDMFT_L2_4b_loop/expected/: sef.tsv
samples/06_CDMFT_L2_4b_loop/: README.md  general_bath_1D.py  params  plot_output.py  run_slurm.sh
samples/CDMFT/: model_1D_2_4b.py  params  run.py
samples/CDMFT-dVMC/L2_4b_loop/: README.md  averages.tsv  cdmft.tsv  cdmft_iter.tsv  general_bath_1D.py  params  plot_output.py  run_slurm.sh  sef.tsv
samples/CDMFT-dVMC/L2_4b_loop/expected/: averages.tsv  cdmft_ED.tsv  cdmft_dVMC.tsv  cdmft_iter.tsv  plot_output.py
samples/CDMFT-dVMC/expected/: averages.tsv  sef.tsv
samples/CPT/: QCM_params.def  README.md  clean.sh  fermi_surface.py  model_3x4.py  params
samples/CPT-dVMC/3x4/: params
samples/CPT_LOOP/: clean.sh  fermi_surface.py  params  run.sh
samples/dVMC/: README.md  clean.sh  params
samples/dVMC_CDMFT/: QCM_params.def  README.md  averages.tsv  cdmft.tsv  cdmft_iter.tsv  clean.sh  general_bath_1D.py  params  sef.tsv
samples/dVMC_CDMFT/expected/: cdmft.tsv
samples/dVMC_CPT/: README.md  clean.sh  fermi_surface.py  model_3x4.py  params
src/ComplexUHF/: CMakeLists.txt
src/StdFace/: StdFace_vals.h
src/mVMC/: CMakeLists.txt  average.c  avevar.c  calgrn.c  calham_real.c  gauleg.c  initfile.c  legendrepoly.c  locgrn_real.c  makefile_src  matrix.c  parameter.c  pfupdate_real.c  pfupdate_two_real.c  projection.c  qp.c  qp_real.c  quick.sh  readdef.c  setmemory.c  slater.c  splitloop.c  stcopt.c  stcopt_dposv.c  stcopt_pdposv.c  vmccal.c  vmcclock.c  vmcmain.c  vmcmake.c  vmcmake_real.c  workspace.c
src/mVMC/include/: global.h  readdef.h  splitloop.h  stcopt.h  vmcmain.h
src/pfapack/: CMakeLists.txt
tool/: CMakeLists.txt
tool/dvmc/: CMakeLists.txt  README  cluster.py  convertOutputBin.py  dos_analysis.py  dvmc.py  dvmc_spectrum.py  dvmc_spectrum_eigh_w_sqrtS.py  dvmc_spectrum_w_SVD.py  dvmc_spectrum_w_cond_number.py  fij_sym.py  filter_bin.sh  gnupy  hopping.py  init_groundstate.py  init_params.py  makeExcitation-cdmft.py  makeExcitation.py  makeExcitation_from_hopping.py  makeExcitation_from_hopping_only_t.py  makefile  mergeOutputBin.py  selectExcitation.py  template_plot_allAkw.gp  template_plot_dos.gp  zvo_var_average.py
tool/dvmc/old/: averageOhgoe.py  filter_bin.sh  generate_template_gnuplot.py  makeDH4.py  makeFullGreen.py  makeGreenOhgoe.py  postprocess_dVMC.sh  preprocess_dVMC.sh  select_kPath.py  select_kPath_average.py  template_plot_Akw.gp
tool/dvmc/src/: dvmc_gnuplot.c  dvmc_speedup.c
tool/dvmc_cli/: CMakeLists.txt  dvmc  settings.yml
tool/dvmc_cli/src/: bashly.yml  clean_command.sh  excitations_command.sh  generate_command.sh  green_command.sh  groundstate_command.sh  header.sh  process_output_command.sh  qmatrix_command.sh  run_command.sh
